automatically backed up by learn

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -3,11 +3,16 @@
   <head>
     <meta charset="UTF-8">
     <title>title</title>
-    <link rel="stylesheet" href="stylesheets/bootstrap.css" type="text/css">  
+    <link rel="stylesheet" href="stylesheets/bootstrap.css" type="text/css">
   </head>
   <body id="page-top">
     <h1>Welcome to FlatBank</h1>
     <h3>Log In Please</h3>
-
+    <form method="post" action="login">
+      <input name="username" type="text">
+      <input name="password" type="password">
+      <input type="submit" value="Login">
+    </form>
+    <a href=''></a>
   </body>
 </html>
