--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="stylesheets/bootstrap.css" type="text/css">
   </head>
   <body id="page-top">
-    <%=user.name=>
+    Welcome <%=user.name=>
 
   </body>
 </html>
