automatically backed up by learn

--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -7,6 +7,6 @@
   </head>
   <body id="page-top">
      <%='Welcome ' + @user.username%>
-
+     <%= 'Your Balance: ' @user.balance =>
   </body>
 </html>
